tinkering with final plots

--- a/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
+++ b/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
@@ -564,8 +564,10 @@ plot(rf.full, log="x")  # 500 seems to work fine.
 ```{r}
 # Predictions
 pred.rf <- predict(rf.full, newdata = tss.cal)
-plot(tss.cal$logTSS ~ pred.rf, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,4.5),ylim = c(0,4.5), main = 'rf.full')
+plot(tss.cal$logTSS ~ pred.rf, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,4.5), ylim = c(0,4.5), main = '')
 abline(a=0,b=1)
+text(4,1, "RMSE=6.30 
+%Var=29.94")
 
 # Model error
 #(rmse<-sqrt(sum((pred.rf - tss.cal$logTSS)^2)/length(tss.cal$logTSS))) #untransformed prediction error
@@ -607,7 +609,9 @@ print(paste("inverse natural log RMSE =", RMSE.ut.rf.red_20))
 RMSE.ut.rf.red_20_scaled <- RMSE.ut.rf.red_20/range_tss
 print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_20_scaled*100, '%'))
 ```
+
 #### * Final reduced model N = 15
+
 ```{r}
 set.seed(32)
 
@@ -633,9 +637,12 @@ print(paste("inverse natural log RMSE =", RMSE.ut.rf.red_15))
 RMSE.ut.rf.red_15_scaled <- RMSE.ut.rf.red_15/range_tss
 print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_15_scaled*100, '%'))
 
-#Untransformed plot log scale axes
-plot((exp(tss.cal$logTSS)-1) ~ (exp(pred.rf.red_15)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = 'red_15')
+#Untransformed plot log scale axes *** FOR REPORT
+plot((exp(tss.cal$logTSS)-1) ~ (exp(pred.rf.red_15)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = '', 
+     xlim = (c(0.2,100)), ylim = c(0.2,100))
 abline(a=0,b=1)
+text(50, 0.5, "RMSE = 6.35 
+%Var = 26.58")
 
 #Untransformed plot no log scale axes
 plot((exp(tss.cal$logTSS)-1) ~ (exp(pred.rf.red_15)-1),  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = 'red_15')
@@ -667,9 +674,12 @@ print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_15_val_scaled*100, '%'))
 plot(tss.val$logTSS ~ pred.rf.red_15_val, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,4.5), ylim = c(0,4.5), main = 'red_15_VAL')
 abline(a=0,b=1)
 
-#Untransformed plot log scale axes
-plot((exp(tss.val$logTSS)-1) ~ (exp(pred.rf.red_15_val)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = 'red_15 VAL')
+#Untransformed plot log scale axes *** FOR REPORT
+plot((exp(tss.val$logTSS)-1) ~ (exp(pred.rf.red_15_val)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = '',
+  xlim = (c(0.2,100)), ylim = c(0.2,100))
 abline(a=0,b=1)
+text(50, 0.5, "RMSE = 13.68 
+%Var = #")
 
 #Untransformed plot no log scale axes
 plot((exp(tss.val$logTSS)-1) ~ (exp(pred.rf.red_15_val)-1),  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = 'red_15 VAL')
@@ -677,6 +687,27 @@ abline(a=0,b=1)
 
 residuals.red_15_val <- (exp(tss.val$logTSS)-1) - (exp(pred.rf.red_15_val)-1) # Observed minus predicted 
 ```
+
+#### Side-by-side plots for report
+
+```{r}
+par(mfrow = c(1,2))
+
+#Untransformed plot log scale axes *** FOR REPORT --- CAL dataset 
+plot((exp(tss.cal$logTSS)-1) ~ (exp(pred.rf.red_15)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = 'CAL', 
+     xlim = (c(0.2,100)), ylim = c(0.2,100))
+abline(a=0,b=1)
+text(50, 0.5, "RMSE = 6.35 
+%Var = 26.58")
+
+#Untransformed plot log scale axes *** FOR REPORT --- apply CAL model to VAL dataset 
+plot((exp(tss.val$logTSS)-1) ~ (exp(pred.rf.red_15_val)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = '', main = 'VAL',
+  xlim = (c(0.2,100)), ylim = c(0.2,100))
+abline(a=0,b=1)
+text(50, 0.5, "RMSE = 13.68 
+%Var = #")
+```
+
 
 #### Run all sites (CAL AND VAL) through final reduced model.
 ```{r}
@@ -801,7 +832,6 @@ quantile(tss.ref.hi$RDCRSWS, probs = seq(.1, .9, by = .1))
 ```
 
 #### Reference expectations for environmental variables
-
 ```{r}
 # Adjust human influenced variables to ref levels
 
